config/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider-webaudio
  namespace: webaudio-system
spec:
  selector:
    app: provider-webaudio
  ports:
    - name: ui
      port: 9090
      targetPort: ui
